--- a/apropos.html
+++ b/apropos.html
@@ -87,7 +87,7 @@
 <section class="infos">
     <hr>
     <p>7H-22:30H</p>
-    <p>contact@delicechinabio.com</p>
+    <p>contact@lanternes_rouges.com</p>
     <p>1 Avenue Des Champs-Elysées</br>
     75008 Paris</p>
     <hr>
